--- a/package.json
+++ b/package.json
@@ -2,6 +2,8 @@
   "name": "method-sop",
   "version": "0.1.0",
   "private": true,
+  "main": "server/index.js",
+  "proxy": "http://localhost:4000",
   "dependencies": {
     "axios": "^0.18.0",
     "bcryptjs": "^2.4.3",
@@ -11,8 +13,11 @@
     "massive": "^5.7.5",
     "react": "^16.8.1",
     "react-dom": "^16.8.1",
+    "react-hot-loader": "^4.6.5",
+    "react-player": "^1.9.3",
     "react-redux": "^6.0.0",
     "react-router-dom": "^4.3.1",
+    "react-router-scroll": "^0.4.4",
     "react-scripts": "2.1.5",
     "redux": "^4.0.1",
     "styled-components": "^4.1.3"
