--- a/package.json
+++ b/package.json
@@ -11,9 +11,9 @@
     "express": "^4.16.4",
     "express-session": "^1.15.6",
     "massive": "^5.7.5",
+    "node-sass": "^4.11.0",
     "react": "^16.8.1",
     "react-dom": "^16.8.1",
-    "react-hot-loader": "^4.6.5",
     "react-player": "^1.9.3",
     "react-redux": "^6.0.0",
     "react-router-dom": "^4.3.1",
