--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "react-router-scroll": "^0.4.4",
     "react-scripts": "2.1.5",
     "redux": "^4.0.1",
-    "styled-components": "^4.1.3"
+    "styled-components": "^4.1.3",
+    "vimeo": "^2.1.1"
   },
   "scripts": {
     "start": "react-scripts start",
