--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "aws-sdk": "^2.409.0",
     "axios": "^0.18.0",
     "bcryptjs": "^2.4.3",
+    "bootstrap": "^4.3.1",
     "cors": "^2.8.5",
     "dotenv": "^6.2.0",
     "express": "^4.16.4",
@@ -16,6 +17,7 @@
     "massive": "^5.7.5",
     "node-sass": "^4.11.0",
     "react": "^16.8.1",
+    "react-bootstrap": "^1.0.0-beta.5",
     "react-dom": "^16.8.1",
     "react-pdf": "^4.0.3",
     "react-player": "^1.9.3",
@@ -23,6 +25,7 @@
     "react-router-dom": "^4.3.1",
     "react-router-scroll": "^0.4.4",
     "react-scripts": "2.1.5",
+    "react-stripe-elements": "^2.0.3",
     "redux": "^4.0.1",
     "styled-components": "^4.1.3",
     "vimeo": "^2.1.1"
