--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "aws-sdk": "^2.409.0",
     "axios": "^0.18.0",
     "bcryptjs": "^2.4.3",
+    "body-parser": "^1.18.3",
     "bootstrap": "^4.3.1",
     "cors": "^2.8.5",
     "dotenv": "^6.2.0",
@@ -27,6 +28,7 @@
     "react-scripts": "2.1.5",
     "react-stripe-elements": "^2.0.3",
     "redux": "^4.0.1",
+    "stripe": "^6.25.1",
     "styled-components": "^4.1.3",
     "vimeo": "^2.1.1"
   },
