--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "server/index.js",
   "proxy": "http://localhost:4000",
   "dependencies": {
+    "@material-ui/core": "^3.9.2",
     "@sendgrid/mail": "^6.3.1",
     "aws-sdk": "^2.409.0",
     "axios": "^0.18.0",
