--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "massive": "^5.7.5",
     "node-sass": "^4.11.0",
     "react": "^16.8.1",
+    "react-beautiful-dnd": "^10.0.4",
     "react-bootstrap": "^1.0.0-beta.5",
     "react-chartjs-2": "^2.7.4",
     "react-dom": "^16.8.1",
