--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-router-dom": "^4.3.1",
     "react-router-scroll": "^0.4.4",
     "react-scripts": "2.1.5",
+    "react-spring": "^8.0.9",
     "react-stripe-elements": "^2.0.3",
     "redux": "^4.0.1",
     "stripe": "^6.25.1",
